--- a/src/main/resources/ui/stylesheet.css
+++ b/src/main/resources/ui/stylesheet.css
@@ -294,6 +294,15 @@
   -fx-background-color: transparent;
 }
 
+.toggle-button {
+  -fx-text-fill: black;
+  -fx-base: transparent;
+  -fx-background-color: transparent;
+  -fx-focus-color: transparent;
+  -fx-border-color: transparent;
+  -fx-effect: null;
+}
+
 /*.jfx-combo-box:selected{*/
 /*-fx-background-color: red;*/
 /*}*/
